tests/baselines/reference/functionOverloadImplementationOfWrongName.errors.txt
==== tests/cases/compiler/functionOverloadImplementationOfWrongName.ts (1 errors) ====
    function foo(x);
    function foo(x, y);
    function bar() { }
             ~~~
!!! functionOverloadImplementationOfWrongName.ts(3,10): error TS2239: Function overload name must be 'foo'.